Linked places with Definitions

--- a/wheretogo.html
+++ b/wheretogo.html
@@ -56,67 +56,67 @@
         <div class="col">
           <h4>Central Province</h4>
           <ul>
-            <li><a href="">Horton Plains</a></li>
-            <li><a href="#">Elephant Orphanage</a></li>
-            <li><a href="#">Nuwara Eliya</a></li>
+            <li><a href="#horton">Horton Plains</a></li>
+            <li><a href="#temple">Temple of the Tooth</a></li>
+            <li><a href="#nuwara">Nuwara Eliya</a></li>
           </ul>
         </div>
         <div class="col">
           <h4>Eastern Province</h4>
           <ul>
-            <li><a href="#">Arugambay Beach</a></li>
-            <li><a href="#">Nilaveli Beach</a></li>
-            <li><a href="#"> Koneswaram Temple</a></li>
+            <li><a href="#arugambay">Arugambay Beach</a></li>
+            <li><a href="#nilaveli">Nilaveli Beach</a></li>
+            <li><a href="#koneswaram"> Koneswaram Temple</a></li>
           </ul>
         </div>
         <div class="col">
           <h4>North Central Province</h4>
           <ul>
-            <li><a href="#">Sigiriya rock</a></li>
-            <li><a href="#">Anuradhapura</a></li>
-            <li><a href="#">Polonnaruwa</a></li>
+            <li><a href="#rock">Sigiriya rock</a></li>
+            <li><a href="#anura">Anuradhapura</a></li>
+            <li><a href="#polannaruwa">Polonnaruwa</a></li>
           </ul>
         </div>
         <div class="col">
           <h4>North Western Province</h4>
           <ul>
-            <li><a href="#">Kalpitiya Beach</a></li>
-            <li><a href="#">Kalpitiya Diving Center</a></li>
-            <li><a href="#">Margarita Village</a></li>
-            <li><a href="#"> Willpattu National Park</a></li>
+            <li><a href="#kalpitiya">Kalpitiya Beach</a></li>
+            <li><a href="#diving">Kalpitiya Diving Center</a></li>
+            <li><a href="#village">Margarita Village</a></li>
+            <li><a href="#willpatttu"> Willpattu National Park</a></li>
           </ul>
         </div>
         <div class="col">
           <h4>Western Province</h4>
           <ul>
-            <li><a href="#">Colombo City</a></li>
-            <li><a href="#">National Meausium</a></li>
-            <li><a href="#">Viharamahadevi Park</a></li>
+            <li><a href="#city">Colombo City</a></li>
+            <li><a href="#meausium">National Meausium</a></li>
+            <li><a href="#devi">Viharamahadevi Park</a></li>
           </ul>
         </div>
         <div class="col">
           <h4>Southern Province</h4>
           <ul>
-            <li><a href="#">Yala National Park</a></li>
-            <li><a href="#">Galle fort Light House</a></li>
-            <li><a href="#">Hikkaduwa Beach</a></li>
-            <li><a href="#">Mirissa Beach</a></li>
+            <li><a href="#yala">Yala National Park</a></li>
+            <li><a href="#house">Galle fort Light House</a></li>
+            <li><a href="#hikkaduwa">Hikkaduwa Beach</a></li>
+            <li><a href="#mirissa">Mirissa Beach</a></li>
           </ul>
         </div>
         <div class="col">
           <h4>Sabragamuva Province</h4>
           <ul>
-            <li><a href="#">Olu Ella</a></li>
-            <li><a href="#">Belilena Cave</a></li>
-            <li><a href="#">Udawalave National Park</a></li>
+            <li><a href="#olu">Olu Ella</a></li>
+            <li><a href="#belilena">Belilena Cave</a></li>
+            <li><a href="#udawalave">Udawalave National Park</a></li>
           </ul>
         </div>
         <div class="col">
           <h4>Uva Province</h4>
           <ul>
-            <li><a href="#">Nine Arch Bridge</a></li>
-            <li><a href="#">Mahiyangana Sorabora Lake</a></li>
-            <li><a href="#">Ohiya</a></li>
+            <li><a href="#nine">Nine Arch Bridge</a></li>
+            <li><a href="#sorabora">Mahiyangana Sorabora Lake</a></li>
+            <li><a href="#ohiya">Ohiya</a></li>
           </ul>
         </div>
       </div>
@@ -127,13 +127,14 @@
     <br />
     <br />
     <br />
-    <section id="contain">
-      <section class="destinations">
+
+
+      <section class= "destinations" >
         <div class="imgbox">
           <img src="Images/Horton Plain.jpg" />
         </div>
         <div class="description">
-          <h2>Horton Plains National Park Tourism</h2>
+          <h2 id = "horton">Horton Plains National Park Tourism</h2>
           <p>
             Horton Plains National Park is a UNESCO World Heritage Site,
             situated at an altitude 2,100–2,300 metres and located in Central
@@ -152,7 +153,7 @@
           <img src="Images/Tooth Tample.jpg" />
         </div>
         <div class="description">
-          <h2>Temple of the Tooth</h2>
+          <h2 id = "temple">Temple of the Tooth</h2>
 
           <p>
             Sri Dalada Maligawa is the Sinhalese name for this holy shrine.
@@ -173,27 +174,7 @@
           <img src="Images/Nuwara Eliya 2.jpg" />
         </div>
         <div class="description">
-          <h2>Nuwara Eliya</h2>
-          <p>
-            Nuwara Eliya is Sri Lanka's hill station famed for its tea
-            production. With a multitude of gorgeous attractions ranging from
-            waterfalls and tea plantations to gardens and lakes, Nuwara Eliya is
-            the epitome of scenic beauty. Add to that the colonial-style
-            buildings dotting the area, a golf course and the cold climate— and
-            you'll feel like you have entered a world unlike Sri Lanka's iconic
-            landscape; no wonder it is also called Little England!
-          </p>
-        </div>
-      </section>
-      <br />
-      <br />
-
-      <section class="destinations">
-        <div class="imgbox">
-          <img src="Images/Nuwara Eliya 2.jpg" />
-        </div>
-        <div class="description">
-          <h2>Nuwara Eliya</h2>
+          <h2 id ="nuwara">Nuwara Eliya</h2>
           <p>
             Nuwara Eliya is Sri Lanka's hill station famed for its tea
             production. With a multitude of gorgeous attractions ranging from
@@ -213,7 +194,7 @@
           <img src="Images/Arugambay1.jpg" />
         </div>
         <div class="description">
-          <h2>Arugambay Beach</h2>
+          <h2 id = "arugambay">Arugambay Beach</h2>
           <p>
             Lovely Arugam Bay, a moon-shaped curl of soft sand, is home to a
             famed point break that many regard as the best surf spot in the
@@ -239,7 +220,7 @@
           <img src="Images/nilaweli 3.jpg" />
         </div>
         <div class="description">
-          <h2>Nilaveli Beach</h2>
+          <h2 id ="nilaveli">Nilaveli Beach</h2>
           <p>
             Witness this heaven on earth 16kms northwest of Trincomalee.You will
             find here The pristine white sand juxtaposed against the deep blue
@@ -260,7 +241,7 @@
           <img src="Images/Koneswaram temple 1.jpg" />
         </div>
         <div class="description">
-          <h2>Koneswaram Temple</h2>
+          <h2 id = "koneswaram">Koneswaram Temple</h2>
           <p>
             Believed to date back to 400BC, the Koneswaram Temple in Trincomalee
             is a significant Hindu Temple that has gone through many prosperous
@@ -279,7 +260,7 @@
           <img src="Images/Sigiriya 1.jpg" />
         </div>
         <div class="description">
-          <h2>Sigirya Rock</h2>
+          <h2 id = "rock">Sigirya Rock</h2>
           <p>
             It is located in the Matale district in the centre near the town
             called Dambulla. According to history, this site was chosen by the
@@ -297,7 +278,7 @@
           <img src="Images/Anuradha pura vihara 1.jpg" />
         </div>
         <div class="description">
-          <h2>Anuradhapura</h2>
+          <h2 id = "anura">Anuradhapura</h2>
           <p>
             It is located in the Matale district in the centre near the town
             called Dambulla. According to history, this site was chosen by the
@@ -315,7 +296,7 @@
           <img src="Images/Polonnaruwa 2.jpg" />
         </div>
         <div class="description">
-          <h2>Polonnaruwa</h2>
+          <h2 id="polannaruwa">Polonnaruwa</h2>
           <p>
             Polonnaruwa, a marvel of a place, is in Northern Sri Lanka. The city
             once served as the capital of the Kingdom of Polonnaruwa under the
@@ -335,7 +316,7 @@
           <img src="Images/Kalpitiya beach 2.jfif" />
         </div>
         <div class="description">
-          <h2>Kalpitiya Beach</h2>
+          <h2 id ="kalpitiya">Kalpitiya Beach</h2>
           <p>
             Have you ever seen dolphins dancing? Well, on the beaches of
             Kalpitiya this is an ordinary sight. You simply can’t miss the
@@ -357,7 +338,7 @@
           <img src="Images/diving-gears.jpg" />
         </div>
         <div class="description">
-          <h2>Kalpitiya Diving Center</h2>
+          <h2 id="diving">Kalpitiya Diving Center</h2>
           <p>
             Kalpitiya Diving Center is a popular name amongst the tourists as
             well as locals. As Kalpitiya is a lagoon with the total area of
@@ -384,7 +365,7 @@
           />
         </div>
         <div class="description">
-          <h2>Margarita Village</h2>
+          <h2 id="village">Margarita Village</h2>
           <p>
             Adventure lovers always love to experience kite-surfing activities.
             If you are looking for similar such experience, then Margarita
@@ -408,7 +389,7 @@
           <img src="Images/wilpattu-teal-cottage 1.jpg" />
         </div>
         <div class="description">
-          <h2>Willpattu National Park</h2>
+          <h2 id = "willpatttu">Willpattu National Park</h2>
           <p>
             Wilpattu National Park is famous in Sri Lanka for many reasons.
             Scenic attraction, wildlife and walking trails seek the attention of
@@ -432,7 +413,7 @@
           <img src="Images/galleface-green-lakeside-1090X610.jpg" />
         </div>
         <div class="description">
-          <h2>Colombo City</h2>
+          <h2 id="city">Colombo City</h2>
           <p>
             Colombo is Sri Lanka's prime city. The official capital, Sri
             Jayawardenepura Kotte, is also within the urban area of Colombo, so
@@ -450,7 +431,7 @@
           <img src="Images/Museum.jpg" />
         </div>
         <div class="description">
-          <h2>National Meausium</h2>
+          <h2 id ="meausium">National Meausium</h2>
           <p>
             The National Museum of Colombo is a two-storey building which is the
             largest museum in Sri Lanka. It dates back to 1877 and has a
@@ -476,7 +457,7 @@
           <img src="Images/dhevi park 2.JPG" />
         </div>
         <div class="description">
-          <h2>Viharamahadevi Park</h2>
+          <h2 id="devi">Viharamahadevi Park</h2>
           <p>
             Located in the busy and crowded city of Colombo is the beautiful
             Viharamahadevi Park. This gorgeous park is located quite close to
@@ -499,7 +480,7 @@
           <img src="Images/Yala resort.jpg" />
         </div>
         <div class="description">
-          <h2>Yala National Park</h2>
+          <h2 id="yala">Yala National Park</h2>
           <p>
             Yala National Park was originally a hunters arena during British
             colonial rule but now has the highest population of leopards on
@@ -523,7 +504,7 @@
           <img src="Images/Galle fort original.jpg" />
         </div>
         <div class="description">
-          <h2>Galle fort Light House</h2>
+          <h2 id="house">Galle fort Light House</h2>
           <p>
             Galle Fort Lighthouse, one of the oldest in Sri Lanka, is a coastal
             lighthouse inside Galle Fort. Initially built in 1848, it is one of
@@ -545,7 +526,7 @@
           <img src="Images/Hikkaduwa-Beach 1.jpg" />
         </div>
         <div class="description">
-          <h2>Hikkaduwa Beach</h2>
+          <h2 id="hikkaduwa">Hikkaduwa Beach</h2>
           <p>
             The island of Sri Lanka brings to you beaches that are popular for
             their beauty and surfing spots. One such cosy beach town in Sri
@@ -569,7 +550,7 @@
           <img src="Images/Mirissa 2.jfif" />
         </div>
         <div class="description">
-          <h2>Mirissa Beach</h2>
+          <h2 id="mirissa">Mirissa Beach</h2>
           <p>
             Surfing, snorkelling, plus a plethora of restaurants and
             pubs—Mirissa Beach is nothing short of spectacular; add to that
@@ -596,7 +577,7 @@
           <img src="Images/ella-olu1.JPG" />
         </div>
         <div class="description">
-          <h2>Olu Ella - Yatiyantota</h2>
+          <h2 id="olu">Olu Ella - Yatiyantota</h2>
           <p>
             The 6th tallest waterfall in the country and the tallest in kegalle
             district. Also it is the highest waterfall connecting to the kelani
@@ -615,7 +596,7 @@
           <img src="Images/Belilena 1.JPG" />
         </div>
         <div class="description">
-          <h2>Belilena Cave</h2>
+          <h2 id="belilena">Belilena Cave</h2>
           <p>
             Belilena is a well known large cave in Sri Lanka, located 8 km from
             the town of Kitulgala. Evidence of prehistoric human presence as
@@ -635,7 +616,7 @@
           <img src="Images/udawala park 2.jpg" />
         </div>
         <div class="description">
-          <h2>Udawalave National Park</h2>
+          <h2 id="udawalave">Udawalave National Park</h2>
           <p>
             You will be surrounded with herds of elephants once you reach
             Udawalawe National Park. The amazing jungle backdrop which this
@@ -655,7 +636,7 @@
           <img src="Images/Nine Arch 2.jfif" />
         </div>
         <div class="description">
-          <h2>Nine Arch Bridge</h2>
+          <h2 id="nine">Nine Arch Bridge</h2>
           <p>
             One of the highlights in the mountain village Ella is the 30-meter
             high Demodara Nine Arch Bridge. With a small 30-minute walk through
@@ -673,7 +654,7 @@
           <img src="Images/Mahiyangana Sorabora wewa.jpg" />
         </div>
         <div class="description">
-          <h2>Mahiyangana Sorabora Lake</h2>
+          <h2 id="sorabora">Mahiyangana Sorabora Lake</h2>
           <p>
             Lush greenery, tropical climate and wilderness camping is the key
             essence of visiting Mahiyanganaya Sorabora Lake. This is a manmade
@@ -696,7 +677,7 @@
           <img src="Images/Ohiya 2.jfif" />
         </div>
         <div class="description">
-          <h2>Ohiya</h2>
+          <h2 id="ohiya">Ohiya</h2>
           <p>
             In the Uva Province, Ohiya is a village in the Badulla District.
             Some of the main attractions in Ohiya are The Devil's Staircase,
